# hyperlane-plugin-websocket

./: .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: publish.yml  rust.yml
sh/: test.sh
src/: cfg.rs  enum.rs  impl.rs  lib.rs  struct.rs  test.rs
src/tests/: cfg.rs
src/websocket/: const.rs  enum.rs  impl.rs  mod.rs  struct.rs  trait.rs
tests/: mod.rs
tests/websocket/: fn.rs  impl.rs  mod.rs  static.rs  struct.rs
