[package]
name = "hyperlane-plugin-websocket"
version = "3.1.6"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A WebSocket plugin for the Hyperlane framework, providing robust WebSocket communication capabilities and integrating with hyperlane-broadcast for efficient message dissemination."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/hyperlane-dev/hyperlane-plugin-websocket.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
hyperlane = "10.10.0"
hyperlane-broadcast = "0.8.2"

[profile.dev]
incremental = true
opt-level = 3
lto = true
panic = "unwind"
debug = false

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
